--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "app"
 version = "0.1.0"
@@ -15,7 +16,7 @@ rust-version = "1.60"
 tauri-build = { version = "*", features = [] }
 
 [dependencies]
-tauri = { version = "*", features = [ "window-start-dragging", "macos-private-api"] }
+tauri = { version = "*", features = [ "path-all", "window-start-dragging", "macos-private-api"] }
 window-vibrancy = "0.4.3"
 window-shadows = "0.2.2"
 sled = "*"
@@ -25,6 +26,7 @@ rayon = "1.8.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "*"
 lazy_static = "*"
+tantivy = "*"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
