--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,9 +27,13 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "*"
 lazy_static = "*"
 tantivy = "*"
+tokio = "1.35.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
+
+#[package.metadata.windows]
+#manifest = "./.manifest"
