--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,8 @@ serde_json = "*"
 lazy_static = "*"
 tantivy = "*"
 tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
+winres = "*"
+winsafe = { version = "0.0.19", features = [ "shell" ] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
