--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +20,13 @@
     "@interactjs/modifiers": "^1.10.26",
     "@tauri-apps/cli": "^1.5.9",
     "dragula": "^3.7.3",
-    "interactjs": "^1.10.26"
+    "interactjs": "^1.10.26",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@interactjs/interact": "^1.10.26",
-    "@tauri-apps/api": "^1.5.3"
+    "@tauri-apps/api": "^1.5.3",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "vite": "^5.2.0"
   }
 }
